--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -91,6 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:paddingHorizontal="33dp"
+        android:background="@drawable/layout_button"
         android:fontFamily="@font/opensans_bold"
         android:layout_marginTop="30dp"/>
 
