--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -178,6 +178,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Register"
+        android:paddingHorizontal="33dp"
+        android:background="@drawable/layout_button"
         android:fontFamily="@font/opensans_bold"
         android:layout_marginTop="8dp"/>
 
