--- a/app/src/main/res/layout/activity_partner_analytics_page.xml
+++ b/app/src/main/res/layout/activity_partner_analytics_page.xml
@@ -17,9 +17,50 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Product Analytics"/>
+            android:text="Product Analytics"
+            android:textSize="30dp"
+            android:textColor="@color/black"
+            android:textAlignment="center"/>
+
+        <!--        Yang bagian ini boleh bantu benerin Ndy wkwk-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Day"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:text="Month"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Year"/>
+
+        </LinearLayout>
+
+        <!--        Yang bagian ini boleh bantu benerin Ndy wkwk-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+        </LinearLayout>
+
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/pieChart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"/>
 
     </LinearLayout>
 
