--- a/app/src/main/res/layout/activity_customer_qrscan.xml
+++ b/app/src/main/res/layout/activity_customer_qrscan.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,4 +23,14 @@
         app:frameThickness="2dp"
         app:maskColor="#77000000"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/takeOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Let's Order"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="70dp"
+        android:visibility="invisible"/>
+
+</RelativeLayout>
