--- a/app/src/main/res/layout/activity_customer_ordering_page.xml
+++ b/app/src/main/res/layout/activity_customer_ordering_page.xml
@@ -7,6 +7,50 @@
     android:layout_height="match_parent"
     tools:context=".customer.CustomerOrderingPage">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/lightHouse"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardBackgroundColor="@color/black"
+        android:alpha="0.5"
+        android:visibility="invisible"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/confirmDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:cardCornerRadius="20dp"
+        app:cardBackgroundColor="@color/white"
+        android:visibility="invisible">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="15dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Order Success!"
+                android:textSize="20dp"
+                android:textColor="@color/black"
+                android:fontFamily="@font/opensans_bold"/>
+
+            <Button
+                android:id="@+id/okBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal"
+                android:text="Ok"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -323,45 +367,62 @@
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/bottomBar"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/priceTag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="Total "
-            android:fontFamily="@font/opensans_regular"
-            android:textColor="@color/black"
-            android:textSize="20dp"/>
-
-        <TextView
-            android:id="@+id/totalPrice"
+            android:id="@+id/errMsg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/priceTag"
-            android:layout_toLeftOf="@+id/orderBtn"
-            android:text="totalPrice"
-            android:textSize="25dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center_horizontal"
+            android:text=""
             android:fontFamily="@font/opensans_bold"
-            android:textColor="@color/black"/>
+            android:textColor="@color/bold_orange"/>
 
-        <Button
-            android:id="@+id/orderBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:text="Place Order"
-            android:fontFamily="@font/opensans_bold"/>
+        <RelativeLayout
+            android:id="@+id/bottomBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/priceTag"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="Total "
+                android:fontFamily="@font/opensans_regular"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:id="@+id/totalPrice"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/priceTag"
+                android:layout_toLeftOf="@+id/orderBtn"
+                android:text="totalPrice"
+                android:textSize="25dp"
+                android:fontFamily="@font/opensans_bold"
+                android:textColor="@color/black"/>
+
+            <Button
+                android:id="@+id/orderBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:text="Place Order"
+                android:fontFamily="@font/opensans_bold"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
