Added Database and Helper

--- a/app/src/main/res/layout/activity_customer_home_page.xml
+++ b/app/src/main/res/layout/activity_customer_home_page.xml
@@ -75,6 +75,7 @@
                         android:layout_gravity="top"/>
 
                     <TextView
+                        android:id="@+id/userWallet"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
@@ -131,6 +132,7 @@
                 android:text="Recommended"/>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvRecommend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -175,10 +177,10 @@
 
     </LinearLayout>
 
-    <me.ibrahimsn.lib.SmoothBottomBar
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavbar"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/customer_menu"/>
 
