--- a/app/src/main/res/layout/activity_partner_analytics_page.xml
+++ b/app/src/main/res/layout/activity_partner_analytics_page.xml
@@ -22,29 +22,76 @@
             android:text="Product Analytics"
             android:textSize="30dp"
             android:textColor="@color/black"
+            android:textStyle="bold"
             android:textAlignment="center"/>
 
-        <!--        Yang bagian ini boleh bantu benerin Ndy wkwk-->
+        <!--        Yang bagian ini boleh bantu benerin Ndy wkwk  ___ DONE  -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="55dp"
+            android:layout_marginTop="16dp"
             android:gravity="center_horizontal">
 
-            <Button
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Day"/>
+                android:layout_gravity="center_vertical"
+                app:cardBackgroundColor="@color/bold_orange"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:text="Month"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="30dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:text="Day"/>
 
-            <Button
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Year"/>
+                android:layout_gravity="center_vertical"
+                android:layout_marginHorizontal="24dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="30dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="Month"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="30dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="Year"/>
+
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
