--- a/app/src/main/res/layout/activity_partner_home_page.xml
+++ b/app/src/main/res/layout/activity_partner_home_page.xml
@@ -21,11 +21,13 @@
             android:layout_height="wrap_content"
             android:text="RM Padang Sederhana"
             android:textSize="30dp"
+            android:textStyle="bold"
             android:textColor="@color/black"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -47,29 +49,51 @@
             android:layout_height="wrap_content"
             app:cardBackgroundColor="@color/bold_orange"
             android:layout_marginVertical="30dp"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="10dp">
+                android:layout_marginVertical="18dp"
+                android:layout_marginHorizontal="25dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Today's Income"
-                    android:textSize="25dp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/totalIncome"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textSize="40dp"
-                    android:text="Rp. 80000"
-                    android:layout_marginBottom="10dp"/>
+                    android:orientation="horizontal"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Rp"
+                        android:textColor="@color/white"
+                        android:textStyle="bold"
+                        android:textSize="20sp
+"
+                        android:layout_gravity="top"/>
+
+                    <TextView
+                        android:id="@+id/userWallet"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/white"
+                        android:textSize="40sp"
+                        android:textStyle="bold"
+                        android:text="80000"
+                        android:layout_marginLeft="5dp"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -78,8 +102,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30dp"
+            android:textSize="28sp"
+            android:textStyle="bold"
             android:textColor="@color/black"
+            android:layout_marginBottom="10dp"
             android:text="History"/>
 
         <androidx.recyclerview.widget.RecyclerView
