--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -37,11 +37,13 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/custSelect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/customerselect"/>
 
             <ImageView
+                android:id="@+id/custSelected"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/customerselected"
@@ -55,11 +57,13 @@
             android:layout_alignParentRight="true">
 
             <ImageView
+                android:id="@+id/partSelect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/partnerselect"/>
 
             <ImageView
+                android:id="@+id/partSelected"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/partnerselected"
