--- a/app/src/main/res/layout/activity_partner_show_qrpage.xml
+++ b/app/src/main/res/layout/activity_partner_show_qrpage.xml
@@ -13,7 +13,32 @@
         android:layout_alignParentTop="true"
         android:layout_above="@+id/bottomNavbar"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="20dp">
+        android:layout_marginHorizontal="20dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Food Stall QR"
+            android:fontFamily="@font/opensans_bold"
+            android:textColor="@color/black"
+            android:textSize="32sp"
+            android:layout_marginTop="24dp"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/qr_code"
+            android:layout_gravity="center"
+            android:layout_marginTop="32dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Download QR"
+            android:fontFamily="@font/opensans_bold"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="32dp"/>
 
     </LinearLayout>
 
