--- a/app/src/main/res/layout/activity_partner_home_page.xml
+++ b/app/src/main/res/layout/activity_partner_home_page.xml
@@ -79,12 +79,11 @@
                         android:text="Rp"
                         android:textColor="@color/white"
                         android:textStyle="bold"
-                        android:textSize="20sp
-"
+                        android:textSize="20sp"
                         android:layout_gravity="top"/>
 
                     <TextView
-                        android:id="@+id/userWallet"
+                        android:id="@+id/totalIncome"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
