--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
+    android:layout_margin="15dp"
     tools:context=".LoginPage"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -14,7 +14,7 @@
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:src="@drawable/digeat_logom"
-        android:layout_marginVertical="20dp"/>
+        android:layout_marginBottom="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:text="Welcome to DigEat!"
         android:fontFamily="@font/opensans_bold"
         android:textColor="@color/black"
-        android:textSize="35dp"/>
+        android:textSize="30dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -65,7 +65,7 @@
         android:orientation="horizontal"
         android:gravity="center"
         android:padding="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="18dp"
         android:background="@drawable/form_box">
 
         <ImageView
