--- a/app/src/main/res/layout/activity_partner_show_qrpage.xml
+++ b/app/src/main/res/layout/activity_partner_show_qrpage.xml
@@ -36,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Download QR"
+            android:background="@drawable/layout_button"
             android:fontFamily="@font/opensans_bold"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="32dp"/>
