modified logout button in partner profile page and consumer profile page

--- a/app/src/main/res/layout/activity_partner_profile_page.xml
+++ b/app/src/main/res/layout/activity_partner_profile_page.xml
@@ -245,6 +245,7 @@
             android:layout_marginTop="6dp"/>
 
         <Button
+            android:id="@+id/buttonLogout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Logout"
