--- a/app/src/main/res/layout/activity_customer_home_page.xml
+++ b/app/src/main/res/layout/activity_customer_home_page.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_above="@+id/bottomNavbar"
-        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
         android:orientation="vertical">
 
@@ -151,7 +150,7 @@
                         android:layout_width="96dp"
                         android:layout_height="104dp"
                         android:elevation="2dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_margin="8dp"
                         app:cardCornerRadius="16dp">
 
                         <LinearLayout
@@ -189,7 +188,7 @@
                         android:layout_width="96dp"
                         android:layout_height="104dp"
                         android:elevation="2dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_margin="8dp"
                         app:cardCornerRadius="16dp"
                         android:layout_marginLeft="16dp">
 
@@ -228,7 +227,7 @@
                         android:layout_width="96dp"
                         android:layout_height="104dp"
                         android:elevation="2dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_margin="8dp"
                         app:cardCornerRadius="16dp"
                         android:layout_marginLeft="16dp">
 
